Added updated dashboard script.

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -1864,7 +1864,7 @@
     "\n",
     "# If CSV file is not yet extracted, process ZIP extraction\n",
     "if not os.path.exists(csv_file):\n",
-    "    with Zipfile(zip_file, \"r\") as zf:\n",
+    "    with ZipFile(zip_file, \"r\") as zf:\n",
     "        zf.extract(csv_file)\n",
     "\n",
     "# ---- DATA PREPROCESSING ----\n",
