Added updated dashboard script.

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -1870,7 +1870,7 @@
     "# ---- DATA PREPROCESSING ----\n",
     "\n",
     "# Load data frame\n",
-    "data = pd.read_csv(\"encoded_consolidated_movies.csv\")\n",
+    "data = pd.read_csv(csv_file)\n",
     "\n",
     "# Initialise list with features to be visualised\n",
     "features_to_visualise = ['movieId', 'userId', 'rating', 'timestamp_x']\n",
