Added updated dashboard script.

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -1877,14 +1877,9 @@
     "    \n",
     "    xls_file = os.path.join(extracted_file, xls_filename)\n",
     "    csv_file = os.path.join(extracted_file, csv_filename)\n",
-    "\n",
-    "    # Determine specific encoding for XLS file\n",
-    "    #with open(xls_file, \"rb\") as f:\n",
-    "    #    result = chardet.detect(f.read())\n",
-    "    #    encoding = result[\"XLS\"]\n",
-    "\n",
+    "    \n",
     "    # Load XLS file and convert to CSV format\n",
-    "    data = pd.read_excel(xls_file, engine=\"openpyxl\")\n",
+    "    data = pd.read_excel(xls_file, engine=\"xlrd\")\n",
     "    data.to_csv(csv_file, index=False)\n",
     "\n",
     "# ---- DATA PREPROCESSING ----\n",
