Added updated dashboard script.

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -1852,10 +1852,6 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# Import libraries for ZIP file extractions\n",
-    "from zipfile import ZipFile\n",
-    "import os\n",
-    "\n",
     "# ---- DATA PREPROCESSING ----\n",
     "\n",
     "# Load data frame\n",
@@ -2280,7 +2276,7 @@
     "\n",
     "# ---- lAUNCH DASHBOARD ----\n",
     "#template.servable()\n",
-    "pn.serve(template)"
+    "pn.serve(template, port=8888, allow_websocket_origin=\"*\")"
    ]
   }
  ],
