Added updated dashboard file.

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -2276,7 +2276,7 @@
     "\n",
     "# ---- lAUNCH DASHBOARD ----\n",
     "#template.servable()\n",
-    "pn.serve(template, port=8888, allow_websocket_origin=\"*\")"
+    "pn.serve(template, port=8888, allow_websocket_origin=[\"localhost\", \"127.0.0.1\", \"hub.mybinder.org\"])"
    ]
   }
  ],
