Added updated dashboard script.

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -2258,7 +2258,7 @@
     "\n",
     "# ---- lAUNCH DASHBOARD ----\n",
     "#template.servable()\n",
-    "pn.serve(template, port=8080, allow_websocket_origin=\"https://mybinder.org/v2/gh/Darren-SBA23255-CCT-L8/dashboard/main\")"
+    "pn.serve(template, port=8080)"
    ]
   }
  ],
