--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -2257,8 +2257,8 @@
     ")\n",
     "\n",
     "# ---- lAUNCH DASHBOARD ----\n",
-    "#template.servable()\n",
-    "pn.serve(template, port=8080)"
+    "template.servable()\n",
+    "#pn.serve(template, port=8080)"
    ]
   }
  ],
