Added updated dashboard script.

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -2256,9 +2256,9 @@
     "    header_background=\"#88d8b0\"\n",
     ")\n",
     "\n",
-    "# ---- lAUNCH DASHBOARD ----\n",
-    "template.servable()\n",
-    "#pn.serve(template, port=8080)"
+    "# ---- LAUNCH DASHBOARD ----\n",
+    "template.servable();\n",
+    "pn.serve(template, port=8080, websocket_origin=[\"mybinder.org\", \"localhost\"])"
    ]
   }
  ],
