Added updated dashboard script.

--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -2258,7 +2258,7 @@
     "\n",
     "# ---- LAUNCH DASHBOARD ----\n",
     "template.servable();\n",
-    "pn.serve(template, port=8888, websocket_origin=[\"mybinder.org\", \"localhost\"])"
+    "#pn.serve(template, port=8888, websocket_origin=[\"mybinder.org\", \"localhost\"])"
    ]
   }
  ],
